Issue #2313: Align and fix labels for some more special fields cases in CustomerTicketMessage and -Zoom.

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.InputFields.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.InputFields.css
@@ -308,6 +308,15 @@ label.oooFocus,
     background-color:#ffffff;
 }
 
+.FieldCell input.DynamicFieldDB.oooFull ~ label {
+    border-radius: 10px;
+    top: -29px;
+    font-size: 10px;
+    line-height: 1.3;
+    letter-spacing: 0.5px;
+    background-color: #ffffff;
+}
+
 /* error */
 input.Error,
 textarea.Error,
